Ordené nesting de todas las secciones y borré secciones de testimonios y seguimos creciendo

--- a/views/blog.html
+++ b/views/blog.html
@@ -43,7 +43,6 @@
                    <li class="nav-item">
                      <a class="nav-link" href="./blog.html">Blog</a>
                    </li>
-             
                    <li class="nav-item">
                      <a class="nav-link" href="./contacto.html">Contacto</a>
                    </li>
@@ -52,29 +51,23 @@
              </div>
            </nav>
         </div>
-    </div>
-    
- </header>
+    </div>   
+</header>
 
 <!--Primera Sección Blog-->
 
 <Section class="secUnoBlog container-fluid">
-
     <h1>Blog</h1>
-
     <div class="secUnoBlog__texto">
         <p>Infórmate de las últimas tendencias en diseño de interiores y arquitectura, sé el primero en conocer las novedades de productos, formatos y estilos además de nuestros eventos profesionales y sociales.</p>
     </div>
-
 </Section>
 
 <!--Segunda Sección/Visualización Artículos-->
 
 <section class="container secDosBlog">
     <div class="row">
-
 <!--Primera Fila Blog-->
-
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
             <div class="card w-auto" style="width: 18rem;">
                 <img src="../img/BotanicoBlog.png" class="card-img-top" alt="...">
@@ -85,7 +78,6 @@
                 </div>
             </div>
         </div>
-    
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
             <div class="card w-auto" style="width: 18rem;">
                 <img src="../img/InOutBloog.png" class="card-img-top" alt="...">
@@ -97,7 +89,6 @@
                 </div>
             </div>
         </div>
-    
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
             <div class="card w-auto" style="width: 18rem;">
                 <img src="../img/TerrazoBlog.png" class="card-img-top" alt="...">
@@ -108,9 +99,7 @@
                 </div>
             </div>
         </div>
-
 <!--Segunda Fila Blog-->
-
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
             <div class="card w-auto" style="width: 18rem;">
                 <img src="../img/MarmolBlog.png" class="card-img-top" alt="...">
@@ -121,7 +110,6 @@
                 </div>
             </div>
         </div>     
-        
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
             <div class="card w-auto" style="width: 18rem;">
                 <img src="../img/PisoorganicoBlog.png" class="card-img-top" alt="...">
@@ -132,7 +120,6 @@
                 </div>
             </div>
         </div>
-    
         <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
             <div class="card w-auto" style="width: 18rem;">
                 <img src="../img/LavaplatosBlog.png" class="card-img-top" alt="...">
@@ -143,75 +130,63 @@
                 </div>
             </div>
         </div>
-
 <!--Tercera Fila Blog-->
-
-<div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
-    <div class="card w-auto" style="width: 18rem;">
-        <img src="../img/TopsBlog.png" class="card-img-top" alt="...">
-        <div class="card-body cardColor">
-            <h4>Tops</h4>
+        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
+          <div class="card w-auto" style="width: 18rem;">
+            <img src="../img/TopsBlog.png" class="card-img-top" alt="...">
+            <div class="card-body cardColor">
+                <h4>Tops</h4>
                 <p>Tecnología innovadora y personalizada que permite conseguir superficies satinadas y brillantes inalterables con el paso del tiempo, mármol, piedra, cemento y metales son la inspiración de estas placas de tops de porcelanato, utilizadas en atractivas cubiertas de cocina, baño, quinchos y edificios.
                 </p>
-          <a href="#" class="btn btn-sm btn-dark">Ver más</a>
+                <a href="#" class="btn btn-sm btn-dark">Ver más</a>
+            </div>
+          </div>
         </div>
-    </div>
-</div>
-
-<div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
-    <div class="card w-auto" style="width: 18rem;">
-        <img src="../img/StoneBlog.png" class="card-img-top" alt="...">
-        <div class="card-body cardColor">
-            <h4>Lavamanos Stone</h4>
-                <p> Conocer lo último en tendencias de lavamanos. El material "Sandstone", que en español es piedra arenisca, entrega durabilidad, calidad y versatilidad, un look único y moderno. La nueva línea de la marca Klipen viene en distintos colores y formatos pensados especialmente para todo tipo de baños y estilos.
-                </p>
-            <a href="#" class="btn btn-sm btn-dark">Ver más</a>
+        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
+          <div class="card w-auto" style="width: 18rem;">
+            <img src="../img/StoneBlog.png" class="card-img-top" alt="...">
+            <div class="card-body cardColor">
+              <h4>Lavamanos Stone</h4>
+              <p> Conocer lo último en tendencias de lavamanos. El material "Sandstone", que en español es piedra arenisca, entrega durabilidad, calidad y versatilidad, un look único y moderno. La nueva línea de la marca Klipen viene en distintos colores y formatos pensados especialmente para todo tipo de baños y estilos.</p>
+              <a href="#" class="btn btn-sm btn-dark">Ver más</a>
+            </div>
+          </div>
         </div>
-    </div>
-</div>
-
-<div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
-    <div class="card w-auto" style="width: 18rem;">
-        <img src="../img/2021Blog.png" class="card-img-top" alt="...">
-        <div class="card-body cardColor">
-            <h4>Tendencia 2021</h4>
-            <p>Los colores de este año no son lo único que marca tendencia este año. Los terrazos minimalistas, cementos tímidos y modernos, mármoles más atrevidos y las maderas, junto a los bricks con look antiguo son lo que este año marcará tendencia en los revestimientos para el hogar.
-            </p>
-          <a href="#" class="btn btn-sm btn-dark">Ver más</a>
+        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
+          <div class="card w-auto" style="width: 18rem;">
+            <img src="../img/2021Blog.png" class="card-img-top" alt="...">
+            <div class="card-body cardColor">
+              <h4>Tendencia 2021</h4>
+              <p>Los colores de este año no son lo único que marca tendencia este año. Los terrazos minimalistas, cementos tímidos y modernos, mármoles más atrevidos y las maderas, junto a los bricks con look antiguo son lo que este año marcará tendencia en los revestimientos para el hogar.
+              </p>
+              <a href="#" class="btn btn-sm btn-dark">Ver más</a>
+            </div>
+          </div>
         </div>
-    </div>
-</div>
-
-    </div>
-
+  </div>
 </section>
 
 <!--Paginas-->
 
 <section class="container secDosBlog">
-
-    <nav aria-label="Page navigation example">
-        <ul class="pagination">
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-            </a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+        </a>
+      </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+      </li>
+    </ul>
+  </nav>
 </section>
-
-
-
 
 <!--Footer-->
 
