--- a/views/servicios.html
+++ b/views/servicios.html
@@ -43,7 +43,7 @@
                      <a class="nav-link" href="./blog.html">Blog</a>
                    </li>
                    <li class="nav-item">
-                     <a class="nav-link" href="./views/contacto.html">Contacto</a>
+                     <a class="nav-link" href="./contacto.html">Contacto</a>
                    </li>
                  </ul>
                </div>
