--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -353,6 +353,17 @@ figure.effect-sadie:hover p {
   display: flex;
   justify-content: space-around; }
 
+/*Efecto GrayScale*/
+.column#grayscale img {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out; }
+
+.column#grayscale:hover img {
+  -webkit-filter: grayscale(0);
+  filter: grayscale(0); }
+
 /*Blog*/
 .secUnoBlog {
   margin-top: 30px;
