--- a/assets/scss/_nosotros.scss
+++ b/assets/scss/_nosotros.scss
@@ -52,8 +52,18 @@
     justify-content: space-around;
 }
 
+/*Efecto GrayScale*/
+.column#grayscale img {
+	-webkit-filter: grayscale(100%);
+	filter: grayscale(100%);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
 
-
+.column#grayscale:hover img {
+	-webkit-filter: grayscale(0);
+	filter: grayscale(0);
+}
 
 
 
