--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -75,7 +75,9 @@
   <div class="row">
   <div class="col-lg-3 col-md-6 col-xs-12 centerEquipo">
     <div class="card border-light" style="width: 13rem;">
-      <img src="../img/arquitecto1.png" class="card-img-top" alt="arquitecto 1">
+      <div class="column" id="grayscale">
+        <img src="../img/arquitecto1.png" class="card-img-top" alt="arquitecto 1">
+      </div>
       <div class="card-body">
         <h4 class="card-title">Sofía García</h4>
         <p class="card-text">Arquitecta, PUC. Socia fundadora de Attico Studio.</p>
@@ -84,7 +86,9 @@
   </div>
   <div class="col-lg-3 col-md-6 col-xs-12 centerEquipo">
     <div class="card border-light" style="width: 13rem;">
-      <img src="../img/arquitecto2.png" class="card-img-top" alt="...">
+      <div class="column" id="grayscale">
+        <img src="../img/arquitecto2.png" class="card-img-top" alt="...">
+      </div>
       <div class="card-body">
         <h4 class="card-title">Sebastián Moya</h4>
         <p class="card-text">Arquitecto, U. de Chile. Socio fundador de Attico Studio</p>
@@ -93,7 +97,9 @@
   </div>
   <div class="col-lg-3 col-md-6 col-xs-12 centerEquipo">
     <div class="card border-light" style="width: 13rem;">
-      <img src="../img/diseñador1.png" class="card-img-top" alt="...">
+      <div class="column" id="grayscale">
+        <img src="../img/diseñador1.png" class="card-img-top" alt="...">
+      </div>
       <div class="card-body">
         <h4 class="card-title">Ana Díaz de Valdés</h4>
         <p class="card-text">Diseñadora Industrial, PUC. Encargada de muebles.</p>
@@ -102,7 +108,9 @@
   </div>
   <div class="col-lg-3 col-md-6 col-xs-12 centerEquipo">
     <div class="card border-light" style="width: 13rem;">
-      <img src="../img/diseñador2.png" class="card-img-top" alt="...">
+      <div class="column" id="grayscale">
+        <img src="../img/diseñador2.png" class="card-img-top" alt="...">
+      </div>
       <div class="card-body">
         <h4 class="card-title">Pilar Müller</h4>
         <p class="card-text">Diseñadora de Interiores, U. de Chile. Encargada de decoración.</p>
