corregí margin sección dos index

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -32,7 +32,6 @@
 
 .sectionDos { 
     margin-top: 30px;
-    padding-top: 60px;
     display: flex;
     justify-content: center;
     background-color: #F3F3F3;
@@ -40,6 +39,7 @@
 }
 
 .sectionDos__textoQuehacemos {
+    margin-top: 40px;
     width: 400px;
     height: 500px;
 
