--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -60,13 +60,13 @@ a {
 /* Estilos Section Servicios*/
 .sectionDos {
   margin-top: 30px;
-  padding-top: 60px;
   display: flex;
   justify-content: center;
   background-color: #F3F3F3;
   height: 350px; }
 
 .sectionDos__textoQuehacemos {
+  margin-top: 40px;
   width: 400px;
   height: 500px; }
   .sectionDos__textoQuehacemos span {
