--- a/views/blog.html
+++ b/views/blog.html
@@ -68,8 +68,8 @@
 <section class="container secDosBlog">
     <div class="row">
 <!--Primera Fila Blog-->
-        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
-            <div class="card w-auto" style="width: 18rem;">
+        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
+            <div class="card w-90" style="width: 18rem;">
                 <img src="../img/BotanicoBlog.png" class="card-img-top" alt="...">
                 <div class="card-body cardColor">
                   <h4>Lo Botánico está de vuelta</h4>
@@ -78,8 +78,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
-            <div class="card w-auto" style="width: 18rem;">
+        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
+            <div class="card w-90" style="width: 18rem;">
                 <img src="../img/InOutBloog.png" class="card-img-top" alt="...">
                 <div class="card-body cardColor">
                     <h4>In&Out</h4>
@@ -89,8 +89,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
-            <div class="card w-auto" style="width: 18rem;">
+        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
+            <div class="card w-90" style="width: 18rem;">
                 <img src="../img/TerrazoBlog.png" class="card-img-top" alt="...">
                 <div class="card-body cardColor">
                     <h4>Estilo Terrazo</h4>
@@ -100,8 +100,8 @@
             </div>
         </div>
 <!--Segunda Fila Blog-->
-        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
-            <div class="card w-auto" style="width: 18rem;">
+        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
+            <div class="card w-90" style="width: 18rem;">
                 <img src="../img/MarmolBlog.png" class="card-img-top" alt="...">
                 <div class="card-body cardColor">
                     <h4>Tendencia Mármol</h4>
@@ -110,8 +110,8 @@
                 </div>
             </div>
         </div>     
-        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
-            <div class="card w-auto" style="width: 18rem;">
+        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
+            <div class="card w-90" style="width: 18rem;">
                 <img src="../img/PisoorganicoBlog.png" class="card-img-top" alt="...">
                 <div class="card-body cardColor">
                     <h4>Pisos Orgánicos</h4>
@@ -120,8 +120,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
-            <div class="card w-auto" style="width: 18rem;">
+        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
+            <div class="card w-90" style="width: 18rem;">
                 <img src="../img/LavaplatosBlog.png" class="card-img-top" alt="...">
                 <div class="card-body cardColor">
                     <h4>Tendencia Lavaplatos</h4>
@@ -131,8 +131,8 @@
             </div>
         </div>
 <!--Tercera Fila Blog-->
-        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
-          <div class="card w-auto" style="width: 18rem;">
+        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
+          <div class="card w-90" style="width: 18rem;">
             <img src="../img/TopsBlog.png" class="card-img-top" alt="...">
             <div class="card-body cardColor">
                 <h4>Tops</h4>
@@ -142,8 +142,8 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
-          <div class="card w-auto" style="width: 18rem;">
+        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
+          <div class="card w-90" style="width: 18rem;">
             <img src="../img/StoneBlog.png" class="card-img-top" alt="...">
             <div class="card-body cardColor">
               <h4>Lavamanos Stone</h4>
@@ -152,8 +152,8 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog">
-          <div class="card w-auto" style="width: 18rem;">
+        <div class="col-lg-4 col-md-4 col-xs-12 colMarginBlog cardCenter">
+          <div class="card w-90" style="width: 18rem;">
             <img src="../img/2021Blog.png" class="card-img-top" alt="...">
             <div class="card-body cardColor">
               <h4>Tendencia 2021</h4>
