--- a/views/contacto.html
+++ b/views/contacto.html
@@ -57,9 +57,9 @@
 <section class="secUnoContacto">
   <div class="card bg-dark">
     <img src="../img/conP.png" class="card-img" alt="...">
-    <div class="card-img-overlay secUnoBodyContacto">
+    <div class="card-img-overlay secUnoBodyContacto col-lg-6 col-md-4 col-xs-12">
       <h1 class="card-title">Contacto</h1>
-      <div class="secUnoBodyContacto__texto">
+      <div>
         <p>Si quieres contactarnos realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres. Recuerda adjuntar un plano si el servicio así lo requiere.</p>
       </div>
     </div>
@@ -69,8 +69,8 @@
 <!--Segunda Sección texto contacto-->
 
 <section class=" container-fluid secContacto">
-  <h2>Contacto</h2>
-    <div class="secContacto__texto">
+  <h2 class="mb-3">Contacto</h2>
+    <div class="col-lg-6 col-md-4 col-xs-12">
       <p>Si quieres contactarnos realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres. Recuerda adjuntar un plano si el servicio así lo requiere.</p>
     </div>
 </section>            
