--- a/assets/scss/_contacto.scss
+++ b/assets/scss/_contacto.scss
@@ -5,34 +5,23 @@
 
 .secUnoContacto {
     margin-top: 30px;
-    height: 500px;
+    height: auto;
 }
 
 .secUnoBodyContacto{
     margin-top: -20px;
-    height: 500px;
+    height: auto;
     padding: 50px 70px 20px;
     border: 5px;
-    width: 600px;
-}
-
-.secUnoBodyContacto__texto {
-    margin-top: 20px;
-    width: 500px;
+    
 }
 
 .secContacto {
-    height: 100px;
     padding: 20px 70px 20px;
-    margin-top: 30px;
-    margin-bottom: 100px;
-}
-
-
-
-.secContacto__texto {
     margin-top: 20px;
+    margin-bottom: -20px;
 }
+
 
 .secFormulario { 
    margin-top: 30px;
