--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -5,23 +5,23 @@
 
 .sectionUnoCard {
     margin-top: 30px;
-    height: 500px;
+    height: auto;
+    width: 100%;
 }
 
 .sectionUnoBody{
     margin-top: -20px;
-    height: 500px;
     padding: 50px 70px 20px;
     border: 5px;
-    width: 600px;
 }
 
 .sectionUno__title {
     margin-top: -20px;
 }
 
-.sectionUno__texto {
+.sectionUnoCard__texto {
     margin-top: 30px;
+    height: auto;
 
     p {
         font-weight: 400;
