--- a/assets/scss/_contacto.scss
+++ b/assets/scss/_contacto.scss
@@ -3,25 +3,17 @@
 
 /*Contacto*/
 
-.secUnoContacto {
-    margin-top: 30px;
-    height: auto;
-}
-
-.secUnoBodyContacto{
-    margin-top: -20px;
-    height: auto;
+.sectionBodyContacto{
+    margin-top: 80px;
     padding: 50px 70px 20px;
     border: 5px;
-    
 }
 
-.secContacto {
-    padding: 20px 70px 20px;
+.secUnoContacto {
     margin-top: 20px;
-    margin-bottom: -20px;
+    height: auto;
+    width: 100%;
 }
-
 
 .secFormulario { 
    margin-top: 30px;
