--- a/views/contacto.html
+++ b/views/contacto.html
@@ -55,27 +55,21 @@
 <!--Primera Sección/Fotografía+Título Principal-->
 
 <section class="secUnoContacto">
-  <div class="card bg-dark">
-    <img src="../img/conP.png" class="card-img" alt="...">
-    <div class="card-img-overlay secUnoBodyContacto col-lg-6 col-md-4 col-xs-12">
-      <h1 class="card-title">Contacto</h1>
-      <div>
-        <p>Si quieres contactarnos realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres. Recuerda adjuntar un plano si el servicio así lo requiere.</p>
-      </div>
+  <div class="jumbotron">
+    <div>
+      <img src="../img/conP.png" class="card-img img-fluid" alt="...">
+    </div>
+    <div class="card-img-overlay sectionUnoBody col-9">
+      <h1>Contactanos!</h1>
+      <p class="lead mt-3">Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres. Recuerda adjuntar un plano si el servicio así lo requiere.</p>
+      <p class="lead tranScaleBoton">
+        <a class="btn btn-secondary btn-lg shadow-sm mt-3" href="./views/servicios.html" role="button">Volver al Home</a>
+      </p>
     </div>
   </div>
 </section>
 
-<!--Segunda Sección texto contacto-->
-
-<section class=" container-fluid secContacto">
-  <h2 class="mb-3">Contacto</h2>
-    <div class="col-lg-6 col-md-4 col-xs-12">
-      <p>Si quieres contactarnos realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres. Recuerda adjuntar un plano si el servicio así lo requiere.</p>
-    </div>
-</section>            
-
-<!--Tercera Sección/Formulario de Contacto-->
+<!--Segunda Sección/Formulario de Contacto-->
 
 <section class="container-fluid secFormulario">
   <form class="col-lg-6 col-xs-12">
