última versión 4ta entrega

--- a/views/contacto.html
+++ b/views/contacto.html
@@ -60,7 +60,7 @@
       <h1 class="mb-3">Contacto</h1>
       <p class="mb-3 font-weight-bolder d-flex justify-content-center secUno">Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres. Recuerda adjuntar un plano si el servicio así lo requiere</p>
       <p class="lead tranScaleBoton">
-        <a class="btn btn-secondary btn-lg shadow-sm mt-3" href="./views/servicios.html" role="button">Ver Servicios</a>
+        <a class="btn btn-secondary btn-lg shadow-sm mt-3" href="/index.html" role="button">Volver al Home</a>
       </p>
     </div>
   </div>
