--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,6 +1,6 @@
 /* Estilos Genericos */
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Poppins;
   color: #2D2D2D; }
 
 h1 {
@@ -19,12 +19,12 @@ h3 {
   color: #3F3F3F; }
 
 h4 {
-  font-size: 1,1rem;
+  font-size: 0,5rem;
   font-weight: 400;
   color: #3F3F3F; }
 
 p {
-  font-size: 13pt;
+  font-size: 12pt;
   font-weight: 300;
   text-align: left; }
 
