--- a/assets/scss/_tipografia.scss
+++ b/assets/scss/_tipografia.scss
@@ -4,7 +4,7 @@
 /* Estilos Genericos */
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Poppins;
     
     color: #2D2D2D ;
 }
@@ -29,13 +29,13 @@ h3 {
 }
 
 h4 {
-    font-size: 1,1rem;
+    font-size: 0,5rem;
     font-weight: 400;
     color:#3F3F3F ;
 }
 
 p {
-    font-size: 13pt;
+    font-size: 12pt;
     font-weight: 300;
     text-align: left;
 }
