--- a/views/blog.html
+++ b/views/blog.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Attico Studio revisa nuestra sección sobre tendencias en arquitectura y diseño de interiores.">
     <meta name="keywords" content="TENDENCIA, DISEÑO, ARQUITECTURA, NOVEDADES">
     <title>Blog atticostudio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="../assets/css/estilos.css">
@@ -72,7 +74,7 @@
             <div class="card w-90" style="width: 18rem;">
                 <img src="../img/BotanicoBlog.png" class="card-img-top" alt="...">
                 <div class="card-body cardColor">
-                  <h4>Lo Botánico está de vuelta</h4>
+                  <h4>Estilo Botánico</h4>
                   <p>Darle un toque verde a tus espacios nunca esta demás. Descubre las nuevas alternativas del mercado en porcelanatos y cerámicas para que tus espacios se vuelvan acogedores y con un estilo único. Revisa los productos que recomendamos, desde impresiones con selvas a sutiles petalos en relevie para tus muros.</p>
                   <a href="#" class="btn btn-sm btn-dark">Ver más</a>
                 </div>
