--- a/views/contacto.html
+++ b/views/contacto.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Attico Studio formulario de contacto.">
     <meta name="keywords" content="CONTACTO, FORMULARIO, COTIZAR, PROYECTO">
     <title>Contacto atticostudio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/estilos.css">
 </head>
@@ -69,7 +71,7 @@
 <!--Segunda Sección/Formulario de Contacto-->
 
 <section>
-  <div class="container-fluid secFormulario">
+  <div class="container secFormulario">
     <div class="row">
       <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
         <form>
