--- a/views/servicios.html
+++ b/views/servicios.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Attico Studio conoce nuestros servicios de arquitectura y diseño de interiores">
     <meta name="keywords" content="PROYECTO, REMODELACIÓN, MUEBLES, DECORACIÓN, SERVICIOS">
     <title>Servicios atticostudio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/estilos.css">
 </head>
