--- a/assets/scss/_servicios.scss
+++ b/assets/scss/_servicios.scss
@@ -9,40 +9,26 @@
     margin-top: 30px;
 }
 
-.sectionUnoServicios {
-    margin-top: 10px;
+.secUnoServicios {
+    margin-top: 15px;
     margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
     background-color: #F3F3F3;
     height: 250px;
 }
 
-.sectionTextoSer {
-    margin-left: 40px;
+.secTextoServicios {
     width: 400px;
 }
 
-.sectionTextoSer span {
+.secTextoServicios span {
     font-weight: 500;
 }
-
 
 .sectionDosSer {
     margin-top: 40px;
     margin-bottom: 30px;
 }
 
-.sectionDosServicios__title {
+.sectionDosSerTitle {
     margin-bottom: 30px;
-}
-
-.col__textoSer {
-    margin-top: 55px;
-    padding: 10px;
-
-}
-
-.colMarginSer {
-    margin-bottom: 20px;
 }
