--- a/views/contacto.html
+++ b/views/contacto.html
@@ -57,7 +57,7 @@
 <!--Primera Sección/Fotografía+Título Principal-->
 
 <section class="row mt-4 ">
-  <div class="p-5 bg-image img-fluid" style="background-image: url('../img/conP.png'); height: 500px;">
+  <div class="p-5 bg-image img-fluid" style="background-image: url('../img/contacto.png'); height: 500px;">
     <div class="w-75">
       <h1 class="mb-3">Contacto</h1>
       <p class="mb-3 font-weight-bolder d-flex justify-content-center secUno">Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres. Recuerda adjuntar un plano si el servicio así lo requiere</p>
