--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -59,9 +59,9 @@
 <section class="container-fluid">
   <h1 class="tituloNosotros">Nosotros</h1>
 </section>
-<section class=" container-fluid secUnoNosotros">
-  <div class="row">
-    <div class="col-lg-6 col-md-6 col-xs-12 secUnoNosotros__texto mt-1">
+<section class="container-fluid secUnoNosotros d-flex justify-content-center">
+  <div class="row secTextoNosotros">
+    <div class="col-lg-12 col-md-12 col-xs-12 mt-1">
       <h2 class="mb-3">Quienes Somos</h2>
       <p>Somos un estudio de arquitectura de interior dedicado al diseño para remodelaciones y decoración de interiores. <span> Nuestra pasión es crear hogares cálidos y llenos de vida,</span> con historias que nos invitan a compartir con nuestros seres queridos y que transmitan emociones.</p>
     </div>
@@ -71,7 +71,7 @@
 <!--Segunda Sección/Nuestro Equipo-->
 
 <section class="container-fluid secEquipo">
-  <div class="secEquipo__title">
+  <div class="secEquipoTitle">
     <h2>Nuestro Equipo</h2>
   </div>
   <div class="row">
