--- a/views/servicios.html
+++ b/views/servicios.html
@@ -60,9 +60,10 @@
 <section class="container-fluid">
   <h1 class="tituloServicios">Servicios</h1>
 </section>
-<section class="container-fluid sectionUnoServicios">
- <div class="row">
-    <div class="col-lg-4 col-md-4 col-xs-12 sectionTextoSer mt-5">
+
+<section class="container-fluid secUnoServicios d-flex justify-content-center">
+ <div class="row secTextoServicios">
+    <div class="col-lg-12 col-md-12 col-xs-12 mt-5">
       <h2 class="mb-3">Qué hacemos</h2>
       <p>Somos un <span>equipo multidisciplinario</span> capaz de abarcar distintas competencias. Tenemos una visión global desde la <span>arquitectura en conjunto con diseñadores</span> para obtener un resultado integral.</p>
     </div>
@@ -72,7 +73,7 @@
 <!--Descripción 4 Servicios -->
 
 <section class="container sectionDosSer">
-    <h2 class="sectionDosServicios__title">Nuestros Servicios</h2>
+    <h2 class="sectionDosSerTitle">Nuestros Servicios</h2>
     <div class="row g-4">
       <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
