--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* Estilos Genericos */
 body {
   font-family: Poppins;
@@ -40,37 +41,14 @@ a {
 /* Estilos Section Servicios*/
 .sectionDos {
   margin-top: 30px;
-  display: flex;
-  justify-content: center;
   background-color: #F3F3F3;
   height: 350px; }
 
-.sectionDos__textoQuehacemos {
+.textoSecDos {
   margin-top: 40px;
-  width: 400px;
-  height: 500px; }
-  .sectionDos__textoQuehacemos span {
+  width: 400px; }
+  .textoSecDos span {
     font-weight: 500; }
-
-.tranHora {
-  background-color: #513D59;
-  transition: all .3s; }
-
-.tranHora div a:hover {
-  background-image: linear-gradient(315deg, #d387ab 0%, #b279a7 74%); }
-
-.agendaHora a {
-  background-color: #513D59;
-  color: white;
-  height: 60px;
-  width: 500px;
-  font-size: 20pt;
-  margin-top: 20px;
-  padding: 10px;
-  font-weight: 400;
-  display: flex;
-  justify-content: center;
-  text-decoration: none; }
 
 .sectionDosServicios {
   padding: 50px 20px 20px;
@@ -132,34 +110,24 @@ a {
   padding: 20px 70px 20px;
   margin-top: 30px; }
 
-.sectionUnoServicios {
-  margin-top: 10px;
+.secUnoServicios {
+  margin-top: 15px;
   margin-bottom: 20px;
-  display: flex;
-  justify-content: center;
   background-color: #F3F3F3;
   height: 250px; }
 
-.sectionTextoSer {
-  margin-left: 40px;
+.secTextoServicios {
   width: 400px; }
 
-.sectionTextoSer span {
+.secTextoServicios span {
   font-weight: 500; }
 
 .sectionDosSer {
   margin-top: 40px;
   margin-bottom: 30px; }
 
-.sectionDosServicios__title {
+.sectionDosSerTitle {
   margin-bottom: 30px; }
-
-.col__textoSer {
-  margin-top: 55px;
-  padding: 10px; }
-
-.colMarginSer {
-  margin-bottom: 20px; }
 
 /*Proyectos*/
 .tituloProyectos {
@@ -175,7 +143,7 @@ a {
   margin-bottom: 20px;
   padding-bottom: 20px; }
 
-/*Efecto*/
+/*Efecto Galería*/
 .grid {
   width: 300px;
   margin: 0 auto;
@@ -183,7 +151,6 @@ a {
   list-style: none;
   text-align: center; }
 
-/* Common style */
 .grid figure {
   position: relative;
   overflow: hidden;
@@ -219,8 +186,6 @@ a {
   width: 100%;
   height: 100%; }
 
-/* Anchor will cover the whole item by default */
-/* For some effects it will show as a button */
 .grid figure figcaption > a {
   z-index: 1000;
   text-indent: 200%;
@@ -304,16 +269,13 @@ figure.effect-sadie:hover p {
   margin-top: 30px; }
 
 .secUnoNosotros {
-  display: flex;
-  justify-content: center;
   background-color: #F3F3F3;
   height: 250px; }
 
-.secUnoNosotros__texto {
+.secTextoNosotros {
   width: 400px;
-  padding-top: 15px;
-  margin-left: 40px; }
-  .secUnoNosotros__texto span {
+  margin-top: 10px; }
+  .secTextoNosotros span {
     font-weight: 500; }
 
 .secEquipo {
@@ -321,7 +283,7 @@ figure.effect-sadie:hover p {
   padding: 20px 70px 20px;
   border: 5px; }
 
-.secEquipo__title {
+.secEquipoTitle {
   margin-bottom: 30px; }
 
 .texEquipo {
@@ -336,7 +298,7 @@ figure.effect-sadie:hover p {
   display: flex;
   justify-content: space-around; }
 
-/*Efecto GrayScale*/
+/*Efecto GrayScale Equipo*/
 .column#grayscale img {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
