--- a/assets/scss/_nosotros.scss
+++ b/assets/scss/_nosotros.scss
@@ -10,16 +10,13 @@
 }
 
 .secUnoNosotros {
-    display: flex;
-    justify-content: center;
     background-color: #F3F3F3;
     height: 250px;
 }
 
-.secUnoNosotros__texto {
+.secTextoNosotros {
     width: 400px;
-    padding-top: 15px;
-    margin-left: 40px;
+    margin-top: 10px;
 
     span {
         font-weight: 500;
@@ -33,7 +30,7 @@
     border: 5px;
 }
 
-.secEquipo__title {
+.secEquipoTitle {
     margin-bottom: 30px;
 }
 
@@ -52,7 +49,8 @@
     justify-content: space-around;
 }
 
-/*Efecto GrayScale*/
+/*Efecto GrayScale Equipo*/
+
 .column#grayscale img {
 	-webkit-filter: grayscale(100%);
 	filter: grayscale(100%);
