--- a/assets/scss/_proyectos.scss
+++ b/assets/scss/_proyectos.scss
@@ -17,7 +17,7 @@
 	padding-bottom: 20px;
 }
 
-/*Efecto*/
+/*Efecto Galería*/
 
 .grid {
     width: 300px;
@@ -27,7 +27,6 @@
 	text-align: center;
 }
 
-/* Common style */
 .grid figure {
 	position: relative;
 	overflow: hidden;
@@ -68,8 +67,6 @@
 	height: 100%;
 }
 
-/* Anchor will cover the whole item by default */
-/* For some effects it will show as a button */
 .grid figure figcaption > a {
 	z-index: 1000;
 	text-indent: 200%;
