Modifiqué padding y margin

--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -4,12 +4,14 @@
 /*Blog*/
 
 .secUnoBlog {
-    margin-top: 30px;
-    padding: 20px 70px 20px;
-    border: 5px;
+    width: 100%;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-.secUnoBlog__texto {
+.secBlogTexto {
     margin-top: 30px;
 }
 
