--- a/views/blog.html
+++ b/views/blog.html
@@ -60,7 +60,7 @@
 
 <Section class="secUnoBlog container-fluid">
     <h1>Blog</h1>
-    <div class="secUnoBlog__texto">
+    <div class="secBlogTexto">
         <p>Infórmate de las últimas tendencias en diseño de interiores y arquitectura, sé el primero en conocer las novedades de productos, formatos y estilos además de nuestros eventos profesionales y sociales.</p>
     </div>
 </Section>
