--- a/views/servicios.html
+++ b/views/servicios.html
@@ -72,7 +72,7 @@
 
 <!--Descripción 4 Servicios -->
 
-<section class="container sectionDosSer">
+<section class="container-fluid sectionDosSer">
     <h2 class="sectionDosSerTitle">Nuestros Servicios</h2>
     <div class="row g-4">
       <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
