--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -7,7 +7,7 @@ body {
 h1 {
   color: #513D59;
   font-size: 3em;
-  font-weight: 600; }
+  font-weight: 500; }
 
 h2 {
   font-size: 2rem;
@@ -40,6 +40,9 @@ a {
 
 /* Estilos Section Servicios*/
 .sectionDos {
+  width: 100%;
+  padding-left: 40px;
+  padding-right: 40px;
   margin-top: 30px;
   background-color: #F3F3F3;
   height: 350px; }
@@ -51,7 +54,6 @@ a {
     font-weight: 500; }
 
 .sectionDosServicios {
-  padding: 50px 20px 20px;
   margin-top: 30px; }
 
 .serviciosCenter {
@@ -78,7 +80,9 @@ a {
 
 /* Estilos Section Proyectos */
 .sectionTresPro {
-  padding: 20px 70px 20px;
+  width: 100%;
+  padding-left: 40px;
+  padding-right: 40px;
   margin-top: 30px; }
   .sectionTresPro h2 {
     margin-bottom: 30px; }
@@ -88,11 +92,16 @@ a {
 
 /* Estilos Section Blog */
 .sectionCuatro {
-  padding-bottom: 20px;
+  width: 100%;
+  padding-left: 40px;
+  padding-right: 40px;
   margin-top: 30px; }
 
-.sectionCuatro__title {
-  padding-bottom: 30px; }
+.sectionCuatroTitle {
+  width: 100%;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-bottom: 30px; }
 
 .card-body p {
   font-size: 12pt; }
@@ -106,9 +115,11 @@ a {
 
 /*Servicios*/
 .tituloServicios {
-  height: 100px;
-  padding: 20px 70px 20px;
-  margin-top: 30px; }
+  width: 100%;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px; }
 
 .secUnoServicios {
   margin-top: 15px;
@@ -123,21 +134,22 @@ a {
   font-weight: 500; }
 
 .sectionDosSer {
-  margin-top: 40px;
-  margin-bottom: 30px; }
+  width: 100%;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-top: 40px; }
 
 .sectionDosSerTitle {
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  margin-top: 30px; }
 
 /*Proyectos*/
 .tituloProyectos {
-  height: 100px;
-  padding: 20px 70px 20px;
-  margin-top: 30px; }
-
-.tranScalePro img:hover {
-  transform: scale(2);
-  transition: all .3s; }
+  width: 100%;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-top: 20px;
+  margin-bottom: 30px; }
 
 .marginImgPro {
   margin-bottom: 20px;
@@ -146,7 +158,7 @@ a {
 /*Efecto Galería*/
 .grid {
   width: 300px;
-  margin: 0 auto;
+  margin: auto;
   position: relative;
   list-style: none;
   text-align: center; }
@@ -167,7 +179,7 @@ a {
   display: block; }
 
 .grid figure figcaption {
-  padding: 2em;
+  padding: 40px;
   color: #fff;
   text-transform: uppercase;
   font-size: 1.25em;
@@ -264,9 +276,11 @@ figure.effect-sadie:hover p {
 
 /*Nosotros*/
 .tituloNosotros {
-  height: 100px;
-  padding: 20px 70px 20px;
-  margin-top: 30px; }
+  width: 100%;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px; }
 
 .secUnoNosotros {
   background-color: #F3F3F3;
@@ -280,11 +294,13 @@ figure.effect-sadie:hover p {
 
 .secEquipo {
   margin-top: 30px;
-  padding: 20px 70px 20px;
-  border: 5px; }
+  width: 100%;
+  padding-left: 40px;
+  padding-right: 40px; }
 
 .secEquipoTitle {
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  margin-top: 30px; }
 
 .texEquipo {
   width: 200px;
@@ -311,11 +327,13 @@ figure.effect-sadie:hover p {
 
 /*Blog*/
 .secUnoBlog {
-  margin-top: 30px;
-  padding: 20px 70px 20px;
-  border: 5px; }
+  width: 100%;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px; }
 
-.secUnoBlog__texto {
+.secBlogTexto {
   margin-top: 30px; }
 
 .colMarginBlog {
