--- a/assets/scss/_proyectos.scss
+++ b/assets/scss/_proyectos.scss
@@ -2,15 +2,12 @@
 /*Proyectos*/
 
 .tituloProyectos { 
-    height: 100px;
-    padding: 20px 70px 20px;
-    margin-top: 30px;
+	width: 100%;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
-
-.tranScalePro img:hover {
-    transform: scale(2);
-    transition: all .3s ;
-} 
 
 .marginImgPro {
     margin-bottom: 20px;
@@ -21,7 +18,7 @@
 
 .grid {
     width: 300px;
-    margin: 0 auto;
+	margin: auto;
 	position: relative;
 	list-style: none;
 	text-align: center;
@@ -45,7 +42,7 @@
 }
 
 .grid figure figcaption {
-	padding: 2em;
+	padding: 40px;
 	color: #fff;
 	text-transform: uppercase;
 	font-size: 1.25em;
