--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -5,8 +5,8 @@
 
 .sectionDos { 
     width: 100%;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-top: 30px;
     background-color: #F3F3F3;
     height: 350px;
@@ -58,32 +58,27 @@
 
 .sectionTresPro {
     width: 100%;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-top: 30px;
+    margin-bottom: 30px;
 
-    h2 {
-        margin-bottom: 30px;
-    }
 }
 
-.marginProHome {
-    margin-bottom: 20px;
+.sectionTresTitle {
+    margin-bottom: 30px;
 }
 
 /* Estilos Section Blog */
 
 .sectionCuatro {
     width: 100%;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-top: 30px;
 } 
 
 .sectionCuatroTitle {
-    width: 100%;
-    padding-left: 40px;
-    padding-right: 40px;
     margin-bottom: 30px;
 }
 
