--- a/assets/scss/_nosotros.scss
+++ b/assets/scss/_nosotros.scss
@@ -5,8 +5,8 @@
 
 .tituloNosotros { 
     width: 100%;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -14,6 +14,9 @@
 .secUnoNosotros {
     background-color: #F3F3F3;
     height: 250px;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .secTextoNosotros {
@@ -29,8 +32,8 @@
 .secEquipo {
     margin-top: 30px;
     width: 100%;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .secEquipoTitle {
