--- a/assets/scss/_servicios.scss
+++ b/assets/scss/_servicios.scss
@@ -5,13 +5,16 @@
 
 .tituloServicios { 
     width: 100%;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
 .secUnoServicios {
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-top: 15px;
     margin-bottom: 20px;
     background-color: #F3F3F3;
@@ -28,8 +31,8 @@
 
 .sectionDosSer {
     width: 100%;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-top: 40px;
 }
 
