--- a/views/blog.html
+++ b/views/blog.html
@@ -31,7 +31,7 @@
                <div class="collapse navbar-collapse" id="navbarNav">
                  <ul class="navbar-nav">
                    <li class="nav-item">
-                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                     <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                    </li>
                    <li class="nav-item">
                      <a class="nav-link" href="./servicios.html">Servicios</a>
@@ -43,7 +43,7 @@
                      <a class="nav-link" href="./nosotros.html">Nosotros</a>
                    </li>
                    <li class="nav-item">
-                     <a class="nav-link" href="./blog.html">Blog</a>
+                     <a class="nav-link active" href="./blog.html">Blog</a>
                    </li>
                    <li class="nav-item">
                      <a class="nav-link" href="./contacto.html">Contacto</a>
