--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -29,13 +29,13 @@
                <div class="collapse navbar-collapse" id="navbarNav">
                  <ul class="navbar-nav">
                    <li class="nav-item">
-                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                     <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                    </li>
                    <li class="nav-item">
                      <a class="nav-link" href="./servicios.html">Servicios</a>
                    </li>
                    <li class="nav-item">
-                     <a class="nav-link" href="./proyectos.html">Proyectos</a>
+                     <a class="nav-link active" href="./proyectos.html">Proyectos</a>
                    </li>
                    <li class="nav-item">
                      <a class="nav-link" href="./nosotros.html">Nosotros</a>
