--- a/views/contacto.html
+++ b/views/contacto.html
@@ -57,8 +57,8 @@
 <!--Primera Sección/Fotografía+Título Principal-->
 
 <section class="row mt-4 ">
-  <div class="p-5 bg-image img-fluid" style="background-image: url('../img/contacto.png'); height: 500px;">
-    <div class="w-75">
+  <div class="p-5 bg-image img-fluid" style="background-image: url('../img/Contacto.png'); height: 500px ;">
+    <div class="w-75 col-xs-12">
       <h1 class="mb-3">Contacto</h1>
       <p class="mb-3 font-weight-bolder d-flex justify-content-center secUno">Si quieres contactarnos y cotizar realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres. Recuerda adjuntar un plano si el servicio así lo requiere</p>
       <p class="lead tranScaleBoton">
@@ -70,9 +70,9 @@
 
 <!--Segunda Sección/Formulario de Contacto-->
 
-<section>
-  <div class="container secFormulario">
-    <div class="row">
+<section class="container-fluid">
+  <div class="secFormulario">
+    <div class="row ml-5 mr-5">
       <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
         <form>
           <div class="form-group">
