padding formulario contacto

--- a/views/contacto.html
+++ b/views/contacto.html
@@ -70,9 +70,9 @@
 
 <!--Segunda Sección/Formulario de Contacto-->
 
-<section class="container-fluid">
+<section class="">
   <div class="secFormulario">
-    <div class="row ml-5 mr-5">
+    <div class="row">
       <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
         <form>
           <div class="form-group">
