--- a/views/contacto.html
+++ b/views/contacto.html
@@ -70,10 +70,10 @@
 
 <!--Segunda Sección/Formulario de Contacto-->
 
-<section class="">
-  <div class="secFormulario">
-    <div class="row">
-      <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+<section class="container-fluid">
+  <div class="d-flex justify-content-around mt-5 mb-5 ml-5 mr-5">
+    <div class="row ">
+      <div class="col-md-6">
         <form>
           <div class="form-group">
             <label for="inputEmail4">Nombre</label>
